--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Calculator</title>
 </head>
 <body>
-<div id="container" data-tilt>
+<div id="container">
 <form class="calculator">
     <div class="display"></div>
 <span data-key="clearAll" class="key clearAll">C</span>
